Fixed Timeline Alignment

--- a/src/Scss/LandingPage/_about.scss
+++ b/src/Scss/LandingPage/_about.scss
@@ -1,104 +1,109 @@
 @use "../variables" as var;
 
 .about-wrapper {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: white;
 }
 
 .about-section {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-	width: 100%;
-	padding: 5vh 10vw;
+  width: 100%;
+  padding: 5vh 10vw;
 
-	font-family: "Fira Mono", monospace;
-	text-align: center;
+  font-family: "Fira Mono", monospace;
+  text-align: center;
 
-	border-bottom: 2px solid var.$blue;
+  border-bottom: 2px solid var.$blue;
 
-	background: linear-gradient(var.$black-rgba, var.$black-rgba),
-		url(var.$geo-bkg);
-	background-repeat: no-repeat;
-	background-size: cover;
+  background: linear-gradient(var.$black-rgba, var.$black-rgba),
+    url(var.$geo-bkg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .about-title {
-	margin-bottom: 5vh;
-	font-size: 3rem;
-	font-family: var.$cuprum;
-	text-transform: uppercase;
-	letter-spacing: 4px;
+  margin-bottom: 5vh;
+  font-size: 3rem;
+  font-family: var.$cuprum;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+
+  color: white;
 }
 
 .about-content-wrapper {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .about-image-container {
-	height: auto;
-	margin-bottom: 5vh;
-	max-width: 250px;
+  height: auto;
+  margin-bottom: 5vh;
+  max-width: 250px;
 }
 
 .about-img {
-	width: 100%;
+  width: 100%;
 
-	border-radius: 20px;
+  border-radius: 20px;
 }
 
 .about-info-text {
-	text-align: center;
+  text-align: justify;
 }
 
 .about-info-text {
-	opacity: 0.9;
-	font-size: 0.9rem;
+  color: whitesmoke;
+  opacity: 0.85;
+  font-size: 0.9rem;
+  font-family: var.$viga;
 }
 
 @media screen and (min-width: 700px) {
-	.about-content-wrapper {
-		display: block;
-		width: 100%;
-	}
+  .about-content-wrapper {
+    display: block;
+    width: 100%;
+  }
 
-	.about-image-container {
-		width: 30vw;
-		float: left;
-		margin: 5vh 5vw;
-	}
+  .about-image-container {
+    width: 30vw;
+    float: left;
+    margin: 5vh 5vw;
+  }
 
-	.about-info-text {
-		font-size: 1.25rem;
-		// line-height: 1.5em;
-	}
+  .about-info-text {
+    font-size: 1.25rem;
+    // line-height: 1.5em;
+  }
 }
 
 @media screen and (min-width: 1000px) {
-	.about-title {
-		margin: 5vh;
-		font-size: 5rem;
-		letter-spacing: 6px;
-	}
+  .about-title {
+    margin: 5vh;
+    font-size: 5rem;
+    letter-spacing: 6px;
+  }
 
-	.about-content-wrapper {
-		max-width: 900px;
-		letter-spacing: 4px;
-	}
+  .about-content-wrapper {
+    max-width: 900px;
+    letter-spacing: 4px;
+  }
 
-	.about-image-container {
-		max-width: 350px;
-		margin-left: -5%;
-	}
+  .about-image-container {
+    max-width: 350px;
+    margin-left: -5%;
+  }
 
-	.about-info-text {
-		font-size: 1.5rem;
-		line-height: 1.8em;
-		margin-bottom: 40px;
-	}
+  .about-info-text {
+    // font-size: 1.15rem;
+    line-height: 1.8em;
+    margin-bottom: 40px;
+  }
 }
 // @media screen and (min-width: 1300px) {
 //   .about-info-text {
