--- a/src/Scss/LandingPage/_timeline.scss
+++ b/src/Scss/LandingPage/_timeline.scss
@@ -1,221 +1,224 @@
 @use "../variables" as var;
 
 .timeline {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 
-	padding: 85px 20px;
-	border-bottom: 1px solid var.$blue;
-	background-color: black;
-	font-family: var.$cuprum;
+  padding: 85px 20px;
+  border-bottom: 1px solid var.$blue;
+  background-color: black;
+  font-family: var.$cuprum;
 }
 
 .timeline-header {
-	padding-bottom: 40px;
-	color: white;
-	font-family: var.$fira;
+  padding-bottom: 40px;
+  color: white;
+  font-family: var.$fira;
 }
 
 .timeline-title {
-	font-size: 3rem;
+  font-size: 3rem;
 }
 
 .timeline-subtitle {
-	display: none;
+  display: none;
 }
 
 .timeline-items-wrapper {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
 
-	// position: relative;
+  // position: relative;
 }
 
 .timeline-item-wrapper {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-	position: relative;
+  position: relative;
 
-	margin: 10px;
-	padding: 5px 10px;
-	height: 200px;
-	max-width: 400px;
+  margin: 10px;
+  padding: 5px 10px;
+  height: 200px;
+  max-width: 400px;
 
-	border-radius: 10%;
+  border-radius: 10%;
 }
 .timeline-image-container {
-	height: 120px;
-	// height: 75px;
-	margin-left: 15px;
+  height: 120px;
+  // height: 75px;
+  margin-left: 15px;
 }
 
 .timeline-item-wrapper:nth-child(even) {
-	flex-direction: row-reverse;
+  flex-direction: row-reverse;
 
-	.timeline-image-container {
-		margin-right: 15px;
-	}
+  .timeline-image-container {
+    margin-right: 15px;
+  }
 }
 
 .timeline-image {
-	height: 100%;
-	width: 120px;
-	border-radius: 15%;
+  height: 100%;
+  width: 120px;
+  border-radius: 15%;
 
-	object-fit: cover;
-	object-position: center center;
+  object-fit: cover;
+  object-position: center center;
 }
 
 .tile {
-	width: 55vw;
+  width: 55vw;
 }
 
 .tile-body {
-	padding: 0 15px;
+  padding: 0 15px;
 }
 
 .timeline-item-wrapper:nth-child(1) {
-	background-color: rgb(36, 165, 220);
+  background-color: rgb(36, 165, 220);
 }
 .timeline-item-wrapper:nth-child(2) {
-	background-color: rgb(223, 128, 46);
+  background-color: rgb(223, 128, 46);
 }
 .timeline-item-wrapper:nth-child(3) {
-	background-color: rgb(37, 209, 60);
+  background-color: rgb(37, 209, 60);
 }
 .timeline-item-wrapper:nth-child(4) {
-	background-color: rgb(240, 68, 25);
+  background-color: rgb(240, 68, 25);
 }
 .timeline-item-wrapper:nth-child(6) {
-	background-color: rgb(166, 36, 231);
+  background-color: rgb(166, 36, 231);
 }
 .timeline-item-wrapper:nth-child(5) {
-	background-color: rgb(214, 208, 25);
+  background-color: rgb(214, 208, 25);
 }
 .timeline-item-wrapper:nth-child(7) {
-	background-color: var.$blue;
+  background-color: var.$blue;
 }
 
 .final-image-wrapper {
-	margin: 40px;
-	display: none;
+  margin: 40px;
+  display: none;
 }
 
 .tile-grow {
-	transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 
 .tile-grow:hover {
-	transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 // LARGE SCREEN
 
 @media screen and (min-width: 700px) {
-	// ODD
-	.timeline-item-wrapper:nth-child(odd) {
-		margin-right: 35%;
+  // ODD
+  .timeline-item-wrapper:nth-child(odd) {
+    margin-right: 35%;
 
-		.timeline-image-container {
-			height: 120px;
-			transform: translateX(400%);
-		}
+    .timeline-image-container {
+      height: 120px;
+      transform: translateX(400%);
+    }
 
-		.timeline-image {
-			border-radius: 50%;
-			min-width: 120px;
-			height: 100%;
+    .timeline-image {
+      border-radius: 50%;
+      min-width: 120px;
+      height: 100%;
 
-			object-fit: cover;
-			object-position: center center;
-		}
+      object-fit: cover;
+      object-position: center center;
+    }
 
-		.tile {
-			margin-right: 5vw;
-		}
-		.tile-body {
-			width: 300px;
-			padding-right: 25%;
-			align-self: center;
-		}
+    .tile {
+      margin-right: 5vw;
+    }
+    .tile-body {
+      width: 300px;
+      padding-right: 20%;
+      align-self: center;
+      transform: translateX(-10%);
+    }
 
-		.tile-title {
-			font-size: 2.5rem;
-		}
-	}
+    .tile-title {
+      font-size: 2.5rem;
+    }
+  }
 
-	// EVEN
-	.timeline-item-wrapper:nth-child(even) {
-		margin-left: 25%;
+  // EVEN
+  .timeline-item-wrapper:nth-child(even) {
+    margin-left: 25%;
 
-		.timeline-image-container {
-			height: 120px;
-			transform: translateX(-400%);
-		}
+    .timeline-image-container {
+      height: 120px;
+      transform: translateX(-400%);
+    }
 
-		.timeline-image {
-			border-radius: 50%;
-			min-width: 120px;
-			height: 100%;
+    .timeline-image {
+      border-radius: 50%;
+      min-width: 120px;
+      height: 100%;
 
-			object-fit: cover;
-			object-position: center center;
-		}
+      object-fit: cover;
+      object-position: center center;
+    }
 
-		.tile-body {
-			width: 375px;
-			margin-left: 16.5%;
-			align-self: center;
-		}
+    .tile-body {
+      width: 300px;
+      //   margin-left: 16.5%;
+      align-self: center;
+      padding-left: 20%;
+      transform: translateX(15%);
+    }
 
-		.tile-title {
-			font-size: 2.5rem;
-		}
-	}
+    .tile-title {
+      font-size: 2.5rem;
+    }
+  }
 
-	@media screen and (min-width: 900px) {
-		.timeline-item-wrapper {
-			margin-bottom: 5vh;
-		}
-	}
+  @media screen and (min-width: 900px) {
+    .timeline-item-wrapper {
+      margin-bottom: 5vh;
+    }
+  }
 
-	@media screen and (min-width: 1050px) {
-		.timeline-item-wrapper.tile-title {
-			font-size: 3rem;
-		}
+  @media screen and (min-width: 1050px) {
+    .timeline-item-wrapper.tile-title {
+      font-size: 3rem;
+    }
 
-		.tile-detail {
-			font-size: 1.25rem;
-		}
-	}
+    .tile-detail {
+      font-size: 1.25rem;
+    }
+  }
 
-	// .memory-image {
-	//   width: 120px;
-	//   height: 120px;
-	//   margin-top: 40px;
-	// }
+  // .memory-image {
+  //   width: 120px;
+  //   height: 120px;
+  //   margin-top: 40px;
+  // }
 
-	// .timeline-image-container {
-	//   width: 100%;
-	//   height: 100%;
-	// }
+  // .timeline-image-container {
+  //   width: 100%;
+  //   height: 100%;
+  // }
 
-	// .timeline-image {
-	//   position: absolute;
-	//   top: 0px;
-	//   left: 0px;
+  // .timeline-image {
+  //   position: absolute;
+  //   top: 0px;
+  //   left: 0px;
 
-	//   width: 100%;
-	//   height: 100%;
-	//   object-fit: cover;
-	//   object-position: center center;
-	// }
+  //   width: 100%;
+  //   height: 100%;
+  //   object-fit: cover;
+  //   object-position: center center;
+  // }
 }
 
 // .timeline-item::before {
